[svn r17726] use PopulationProperties for network stuff